# brainkit

./: .gitignore  .impeccable.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/assets/: social-preview.html
.github/workflows/: tests.yml
archive/: agency-vs-personal.html  build-plan.html  governance-playbook.html  index.html  luxury-travel-ai-opportunities.html  one-pager.html  roi-model.html
archive/artifacts/: SOUL.md  dossier-schema.sql  hermes-cron.sh  mcp.config.json  pilot-scorecard.csv
archive/assets/: theme.css
archive/docs/ideation/: 2026-06-28-embark-ai-agents-ideation.md  2026-06-28-luxury-travel-ai-ideation.md
deploy/agents-box/: .env.example  Dockerfile  README.md  add-agent.sh  agents-liveness.sh  backup-agents-offsite.sh  backup-agents.sh  docker-compose.yml
deploy/agents-box/scripts/: 03-brain-first-boot  vault-sync  vault-sync-run
deploy/backup/: README.md  provision-r2.sh  r2.env.example
deploy/brain-box/: Caddyfile.webhook  backup-master.sh  brain-liveness.sh  brain-serve-repo  brain-webhook.service
docs/: .gitignore  README.md  docs.json  getting-started.mdx  index.mdx  onboarding.md  package-lock.json  package.json  vite.config.ts
docs/concepts/: promotions.mdx  retrieval.mdx  spaces-and-permissions.mdx  the-compiler.mdx
docs/deployments/: two-box-chat-only.html
docs/explainers/: backup-restore.html  how-it-works.html  quick-version.html  two-box-chat-only.html
docs/guides/: backup-restore.mdx  deployment.mdx  getting-things-in.mdx  graph-view.mdx  onboarding.mdx  per-employee-setup.mdx  personal-brain.mdx  reference-deployment.mdx
docs/reference/: cli.mdx  configuration.mdx
docs/superpowers/plans/: 2026-07-07-company-brain.md  2026-07-07-cycle-and-doctor.md
docs/superpowers/specs/: 2026-07-07-multitenant-vault-design.md  2026-07-09-readme-design.md
scripts/demo/: demo.tape  seed.sh
src/brain/: __init__.py  chunker.py  cli.py  clients.py  compiler.py  contextgen.py  cycle.py  dashboard.py  dedup.py  doctor.py  edges.py  embeddings.py  errors.py  facts.py  filters.py  frontmatter.py  graphrank.py  indexer.py  ingest.py  liveness.py  mcp.py  notes.py  promotions.py  rename.py  resolver.py  schemas.py  search.py  server.py  shares.py  stats.py  store.py  templates.py  triage.py  vaultmap.py  watch.py  webhook.py  writeback.py
src/brain/assets/: index.html
src/brain/assets/css/: dashboard.css
src/brain/assets/js/: api.js  app.js  capture.js  dom.js  md.js  theme.js  ws.js
src/brain/assets/js/tabs/: admin.js  facts.js  graph.js  (+5 more)
tasks/: lessons.md  todo.md
templates/company-brain-profile/: README.md  SOUL.md  config.yaml
tests/: conftest.py  test_assets_offline.py  test_chunker.py  test_cli.py  test_cli_errors.py  test_clients.py  test_compiler.py  test_contextgen.py  test_cycle.py  test_dashboard.py  test_dedup.py  test_doctor.py  test_e2e_hybrid.py  test_e2e_lifecycle.py  test_edges.py  test_embeddings.py  test_facts.py  test_filters.py  test_frontmatter.py  test_graphrank.py  test_indexer.py  test_ingest.py  test_leak_property.py  test_liveness.py  test_mcp.py  test_notes.py  test_profile_distribution.py  test_promotions.py  test_rename.py  test_resolver.py  test_schemas.py  test_search.py  test_search_leak_property.py  test_server.py  test_shares.py  test_stats.py  test_store.py  test_triage.py  test_vaultmap.py  test_watch.py  (+2 more)
website/: README.md  docs.json  getting-started.mdx  index.mdx  package-lock.json  package.json  vite.config.ts
website/concepts/: promotions.mdx  spaces-and-permissions.mdx  the-compiler.mdx
website/guides/: deployment.mdx  getting-things-in.mdx  per-employee-setup.mdx  personal-brain.mdx  reference-deployment.mdx
website/reference/: cli.mdx  configuration.mdx
(+1 files in other folders)
