[project]
name = "brainkit"
version = "0.1.0"
description = "Multi-tenant company brain on Obsidian-compatible vaults — a private AI assistant for every employee"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
# aiohttp floor is a security bound: 3.14.1 fixes compressed request bodies
# bypassing client_max_size (CVE-2026-54278), which the webhook receiver's
# body-size cap depends on.
dependencies = ["pyyaml>=6.0", "sqlite-vec>=0.1.9", "aiohttp>=3.14.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-aiohttp>=1.0"]

[project.scripts]
brain = "brain.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain"]
# Vendored JS/CSS and the HTML shell are data files under the package; list them
# explicitly so they land in the wheel even though they are not .py modules.
artifacts = ["src/brain/assets/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
