[project]
name = "brainkit"
version = "0.1.0"
description = "Multi-tenant company brain on Obsidian-compatible vaults — each person's copy holds only the notes they may read"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
# aiohttp floor is a security bound: 3.14.1 fixes compressed request bodies
# bypassing client_max_size (CVE-2026-54278), which the webhook receiver's
# body-size cap depends on.
dependencies = ["pyyaml>=6.0", "sqlite-vec>=0.1.9", "aiohttp>=3.14.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-aiohttp>=1.0"]

[project.scripts]
brain = "brain.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain"]
# Vendored JS/CSS and the HTML shell are data files under the package; list them
# explicitly so they land in the wheel even though they are not .py modules.
artifacts = ["src/brain/assets/**"]

# An allowlist, not a deny list. Hatchling reads only the ROOT .gitignore, so
# docs/.gitignore's entries do not reach it — without this the sdist was 133 MB
# and 24,990 files (a whole npm tree, a built docs site, and the local .claude/
# worktrees). /docs is enumerated by source path rather than wholesale for the
# same reason: the docs site is a Node app, and its toolchain drops build trees
# there under names we don't get to predict (node_modules/, dist/, .vercel/,
# .vite/). Naming what belongs fails closed on all of them, present and future.
[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs/*.mdx",
  "/docs/concepts",
  "/docs/guides",
  "/docs/reference",
  "/docs/explainers",
  "/docs/docs.json",
  "/docs/package.json",
  "/docs/package-lock.json",
  "/docs/vite.config.ts",
  "/docs/README.md",
  "/deploy",
  "/templates",
  "/scripts/demo/seed.sh",
  "/README.md",
  "/SECURITY.md",
  "/LICENSE",
  "/pyproject.toml",
  "/uv.lock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
